# deep_server

./: CMakeLists.txt  README  control.sh  deep_client_mt.py  deep_server_mon.sh  restart.sh  start.sh  stop.sh
3rd/tf-wrapper/: tf_wrapper-cc.axx  tf_wrapper-h.axx
Depends/caffe/: frcnn_wrapper.cpp  frcnn_wrapper.hpp
Depends/caffe/include/caffe/layers/: base_data_layer.hpp
Depends/caffe/include/caffe/proto/: caffe.pb.h
Depends/tensorflow/: tf_wrapper-cpp.axx  tf_wrapper-h.axx  tf_wrapper.cpp  tf_wrapper.h
Depends/yolo/: yolo_wrapper.cpp  yolo_wrapper.hpp
cmake/: CompilerCheck.cmake  ConfigGen.cmake  Cuda.cmake  ProtoBuf.cmake  Summary.cmake  Utils.cmake
cmake/Modules/: FindLMDB.cmake  FindLevelDB.cmake  FindMKL.cmake  FindNumPy.cmake  FindSnappy.cmake
src/: actorlogger-cpp.axx  actorlogger-hpp.axx  actorlogger.cpp  actorlogger.hpp  base64-cpp.axx  base64.cpp  caffe_config-hpp.axx  caffe_config.hpp  caffe_process-cpp.axx  caffe_process-hpp.axx  caffe_process.cpp  caffe_process.hpp  color-h.axx  color.h  cv_process-cpp.axx  cv_process-hpp.axx  cv_process.cpp  cv_process.hpp  deep_config-hpp.axx  deep_config.hpp  deep_server-cpp.axx  deep_server-h.axx  deep_server-hpp.axx  deep_server.cpp  deep_server.h  deep_server.hpp  http_broker-cpp.axx  http_broker.cpp  http_parser-cpp.axx  http_parser-hpp.axx  http_parser.cpp  http_parser.hpp  imgprocess-hpp.axx  imgprocess.hpp  nlogger-hpp.axx  nlogger.hpp  parserhelper-cpp.axx  parserhelper.cpp  tcp_broker-cpp.axx  tcp_broker.cpp  (+12 more)
src/proto/: deep-proto.axx  deep.proto
